--- a/static/index.html
+++ b/static/index.html
@@ -6,10 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Transplant</title>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
-  <script type="text/javascript">
-    var REPOSITORIES = {{ repositories|tojson|safe }};
-  </script>
+  <link rel="stylesheet" href="/static/main.css">
 </head>
   <body>
     <div class="container" style="margin-top: 1em; margin-bottom: 1em">
@@ -85,6 +82,7 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='main.js') }}"></script>
+    <script type="text/javascript" src="/config.js"></script>
+    <script type="text/javascript" src="/static/main.js"></script>
   </body>
 </html>
