--- a/client/static/index.html
+++ b/client/static/index.html
@@ -5,12 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Transplant</title>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="/main.css">
 </head>
   <body>
     <section id="app"></section>
-    <script src="//fb.me/react-0.11.1.js"></script>
+    <script src="/components/jquery/dist/jquery.js"></script>
+    <script src="/components/react/react.js"></script>
     <script src="/config.js"></script>
     <script src="/bundle.js"></script>
   </body>
