--- a/client/static/index.html
+++ b/client/static/index.html
@@ -7,9 +7,15 @@
   <title>Transplant</title>
   <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="/main.css">
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
   <body>
-    <section id="app"></section>
+    <section id="app" class="container"></section>
     <script src="/components/jquery/dist/jquery.js"></script>
     <script src="/components/react/react.js"></script>
     <script src="/config.js"></script>
